kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecomm-app
  labels:
    name: ecomm-app
    environment: production
